Add filtering and liner regression

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,8 @@ pandas~=1.2.4
 requests~=2.25.1
 apimoex~=1.2.0
 matplotlib~=3.4.1
-tqdm~=4.54.0
+tqdm~=4.56.0
+cython~=0.29.23
+pymrmr~=0.1.11
+scikit-learn~=0.24.1
+numpy~=1.20.1
