--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-pandas~=1.2.4
+pandas~=1.2.0rc0
 requests~=2.25.1
 apimoex~=1.2.0
 matplotlib~=3.4.1
-tqdm~=4.56.0
-cython~=0.29.23
+tqdm~=4.59.0
 pymrmr~=0.1.11
 scikit-learn~=0.24.1
 numpy~=1.20.1
+plotly~=4.14.3
+PyQt5~=5.15.4
+sklearn~=0.0
