--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ pandas~=1.2.0rc0
 requests~=2.25.1
 apimoex~=1.2.0
 matplotlib~=3.4.1
-tqdm~=4.59.0
-pymrmr~=0.1.11
+tqdm~=4.54.0\
 scikit-learn~=0.24.1
 numpy~=1.20.1
 plotly~=4.14.3
@@ -14,3 +13,5 @@ PyQtWebEngine~=5.15.4
 
 bottle~=0.12.19
 DateTime~=4.3
+Flask~=1.1.2
+pathlib~=1.0.1
