--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pandas~=1.2.0rc0
 requests~=2.25.1
 apimoex~=1.2.0
 matplotlib~=3.4.1
-tqdm~=4.54.0\
+tqdm~=4.54.0
 scikit-learn~=0.24.1
 numpy~=1.20.1
 plotly~=4.14.3
