--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ numpy~=1.20.1
 plotly~=4.14.3
 sklearn~=0.0
 python-dateutil~=2.8.1
-
 DateTime~=4.3
 Flask~=1.1.2
 pathlib~=1.0.1
 tenacity~=7.0.0
+statsmodels~=0.12.2
